# simple_antivirus

./: CMakeLists.txt  README.md  crypto_functions.cpp  crypto_functions.h  file_management.cpp  file_management.h  main.cpp
data/: cyphertext.txt  database.csv  example_database.csv  plain.txt  test_data.txt
headers/: crypto_functions.h  data_functions.h  file_functions.h  file_management.h  main.h  monitor.h  scan.h  virustotal_api.h
libs/: safe_queue.h
src/: crypto_functions.cpp  data_functions.cpp  file_functions.cpp  file_management.cpp  main.cpp  monitor.cpp  scan.cpp  virustotal_api.cpp
